terraform-infra/utilities/influxdb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-ingress
  namespace: influxdb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: influxdb.akos-demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: influxdb-influxdb2
                port:
                  number: 80
